# PTL

./: .gitignore  CMakeLists.txt  Readme.md
inc/ptl/: algorithms.hpp  array.hpp  array_ref.hpp  bitset.hpp  function.hpp  function_ref.hpp  generator.hpp  optional.hpp  optional_ref.hpp  string.hpp  string_ref.hpp  tuple.hpp  type_list.hpp  variant.hpp  variant_ref.hpp  vector.hpp
inc/ptl/internal/: adl_swap.hpp  array.hpp  array_ref.hpp  bitset.hpp  compiler_detection.hpp  contiguous_container_base.hpp  cpp20_emulation.hpp  fnv.hpp  function_ref.hpp  operators.hpp  optional.hpp  os_detection.hpp  requires.hpp  tuple.hpp  type_checks.hpp  type_list.hpp  utility.hpp  variant.hpp
test/: algorithms.cpp  array.cpp  array_ref.cpp  bitset.cpp  function.cpp  function_ref.cpp  generator.cpp  main.cpp  moveable.hpp  operators.cpp  optional.cpp  optional_ref.cpp  string.cpp  string_ref.cpp  tuple.cpp  type_list.cpp  utils.hpp  variant.cpp  variant_ref.cpp  vector.cpp
